@@ -51,3 +51,6 @@ SharePoint Solution Installer Development V1 ChangeLog
 
 2016-02-04, Perry Rapp
  Release 1.2.12.0
+
+2016-02-10, Perry Rapp
+ Display version numbers in upgrade form title
